gitops-deployment/ccn-demo/ccn-app-deployment/cloudnativeapps-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-cloudnativeapps
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    argocd.argoproj.io/managed-by: openshift-gitops
spec:
  finalizers:
  - kubernetes
