gitops-deployment/ccn-demo/ccn-app-deployment/payments-ms.yaml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: payment
  labels:
    app.kubernetes.io/name: payment
    app.kubernetes.io/version: latest
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  template:
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/demo-cloudnativeapps/payment:latest
