gitops-deployment/ccn-demo/ccn-app-deployment/catalog-ms.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name:  catalog
  labels:
    app: catalog
    app.kubernetes.io/component: catalog
    app.kubernetes.io/instance: catalog
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: catalog
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"catalog-database"}]'
    app.openshift.io/vcs-ref: ocp-4.11
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    app: catalog
    deploymentconfig: catalog
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: catalog
        deploymentconfig: catalog
    spec:
      containers:
      - name:  catalog
        image:  quay.io/erivasza0/catalog:latest
        resources: {}
        ports:
        - containerPort:  8080
          protocol: TCP
        - containerPort:  8443
          protocol: TCP
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app: catalog
    app.kubernetes.io/component: catalog
    app.kubernetes.io/instance: catalog
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: catalog
    app.openshift.io/runtime-version: latest
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: catalog
    deploymentconfig: catalog
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: catalog
  labels:
    app: catalog
    app.kubernetes.io/component: catalog
    app.kubernetes.io/instance: catalog
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: catalog
    app.openshift.io/runtime-version: latest
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  subdomain: catalog
  to:
    kind: Service
    name: catalog
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
